src/rocksdb_c.nim


proc rocksdb_block_based_options_create*(): ptr rocksdb_block_based_table_options_t {.
    cdecl, importc: "rocksdb_block_based_options_create", dynlib: librocksdb.}
proc rocksdb_block_based_options_destroy*(
    options: ptr rocksdb_block_based_table_options_t) {.cdecl,
    importc: "rocksdb_block_based_options_destroy", dynlib: librocksdb.}
proc rocksdb_block_based_options_set_block_size*(
    options: ptr rocksdb_block_based_table_options_t; block_size: csize) {.cdecl,
    importc: "rocksdb_block_based_options_set_block_size", dynlib: librocksdb.}
proc rocksdb_block_based_options_set_block_size_deviation*(
    options: ptr rocksdb_block_based_table_options_t; block_size_deviation: cint) {.
    cdecl, importc: "rocksdb_block_based_options_set_block_size_deviation",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_block_restart_interval*(
    options: ptr rocksdb_block_based_table_options_t; block_restart_interval: cint) {.
    cdecl, importc: "rocksdb_block_based_options_set_block_restart_interval",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_index_block_restart_interval*(
    options: ptr rocksdb_block_based_table_options_t;
    index_block_restart_interval: cint) {.cdecl, importc: "rocksdb_block_based_options_set_index_block_restart_interval",
                                        dynlib: librocksdb.}
proc rocksdb_block_based_options_set_metadata_block_size*(
    options: ptr rocksdb_block_based_table_options_t; metadata_block_size: uint64) {.
    cdecl, importc: "rocksdb_block_based_options_set_metadata_block_size",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_partition_filters*(
    options: ptr rocksdb_block_based_table_options_t; partition_filters: cuchar) {.
    cdecl, importc: "rocksdb_block_based_options_set_partition_filters",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_use_delta_encoding*(
    options: ptr rocksdb_block_based_table_options_t; use_delta_encoding: cuchar) {.
    cdecl, importc: "rocksdb_block_based_options_set_use_delta_encoding",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_filter_policy*(
    options: ptr rocksdb_block_based_table_options_t;
    filter_policy: ptr rocksdb_filterpolicy_t) {.cdecl,
    importc: "rocksdb_block_based_options_set_filter_policy", dynlib: librocksdb.}
proc rocksdb_block_based_options_set_no_block_cache*(
    options: ptr rocksdb_block_based_table_options_t; no_block_cache: cuchar) {.
    cdecl, importc: "rocksdb_block_based_options_set_no_block_cache",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_block_cache*(
    options: ptr rocksdb_block_based_table_options_t;
    block_cache: ptr rocksdb_cache_t) {.cdecl, importc: "rocksdb_block_based_options_set_block_cache",
                                     dynlib: librocksdb.}
proc rocksdb_block_based_options_set_block_cache_compressed*(
    options: ptr rocksdb_block_based_table_options_t;
    block_cache_compressed: ptr rocksdb_cache_t) {.cdecl,
    importc: "rocksdb_block_based_options_set_block_cache_compressed",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_whole_key_filtering*(
    a2: ptr rocksdb_block_based_table_options_t; a3: cuchar) {.cdecl,
    importc: "rocksdb_block_based_options_set_whole_key_filtering",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_format_version*(
    a2: ptr rocksdb_block_based_table_options_t; a3: cint) {.cdecl,
    importc: "rocksdb_block_based_options_set_format_version", dynlib: librocksdb.}
const
  rocksdb_block_based_table_index_type_binary_search* = 0
  rocksdb_block_based_table_index_type_hash_search* = 1
  rocksdb_block_based_table_index_type_two_level_index_search* = 2

proc rocksdb_block_based_options_set_index_type*(
    a2: ptr rocksdb_block_based_table_options_t; a3: cint) {.cdecl,
    importc: "rocksdb_block_based_options_set_index_type", dynlib: librocksdb.}
##  uses one of the above enums

proc rocksdb_block_based_options_set_hash_index_allow_collision*(
    a2: ptr rocksdb_block_based_table_options_t; a3: cuchar) {.cdecl,
    importc: "rocksdb_block_based_options_set_hash_index_allow_collision",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_cache_index_and_filter_blocks*(
    a2: ptr rocksdb_block_based_table_options_t; a3: cuchar) {.cdecl,
    importc: "rocksdb_block_based_options_set_cache_index_and_filter_blocks",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_cache_index_and_filter_blocks_with_high_priority*(
    a2: ptr rocksdb_block_based_table_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_block_based_options_set_cache_index_and_filter_blocks_with_high_priority",
    dynlib: librocksdb.}
proc rocksdb_block_based_options_set_pin_l0_filter_and_index_blocks_in_cache*(
    a2: ptr rocksdb_block_based_table_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_block_based_options_set_pin_l0_filter_and_index_blocks_in_cache",
    dynlib: librocksdb.}
proc rocksdb_options_set_block_based_table_factory*(opt: ptr rocksdb_options_t;
    table_options: ptr rocksdb_block_based_table_options_t) {.cdecl,
    importc: "rocksdb_options_set_block_based_table_factory", dynlib: librocksdb.}
##  Cuckoo table options

proc rocksdb_cuckoo_options_create*(): ptr rocksdb_cuckoo_table_options_t {.cdecl,
    importc: "rocksdb_cuckoo_options_create", dynlib: librocksdb.}
proc rocksdb_cuckoo_options_destroy*(options: ptr rocksdb_cuckoo_table_options_t) {.
    cdecl, importc: "rocksdb_cuckoo_options_destroy", dynlib: librocksdb.}
proc rocksdb_cuckoo_options_set_hash_ratio*(
    options: ptr rocksdb_cuckoo_table_options_t; v: cdouble) {.cdecl,
    importc: "rocksdb_cuckoo_options_set_hash_ratio", dynlib: librocksdb.}
proc rocksdb_cuckoo_options_set_max_search_depth*(
    options: ptr rocksdb_cuckoo_table_options_t; v: uint32) {.cdecl,
    importc: "rocksdb_cuckoo_options_set_max_search_depth", dynlib: librocksdb.}
proc rocksdb_cuckoo_options_set_cuckoo_block_size*(
    options: ptr rocksdb_cuckoo_table_options_t; v: uint32) {.cdecl,
    importc: "rocksdb_cuckoo_options_set_cuckoo_block_size", dynlib: librocksdb.}
proc rocksdb_cuckoo_options_set_identity_as_first_hash*(
    options: ptr rocksdb_cuckoo_table_options_t; v: cuchar) {.cdecl,
    importc: "rocksdb_cuckoo_options_set_identity_as_first_hash",
    dynlib: librocksdb.}
proc rocksdb_cuckoo_options_set_use_module_hash*(
    options: ptr rocksdb_cuckoo_table_options_t; v: cuchar) {.cdecl,
    importc: "rocksdb_cuckoo_options_set_use_module_hash", dynlib: librocksdb.}
proc rocksdb_options_set_cuckoo_table_factory*(opt: ptr rocksdb_options_t;
    table_options: ptr rocksdb_cuckoo_table_options_t) {.cdecl,
    importc: "rocksdb_options_set_cuckoo_table_factory", dynlib: librocksdb.}
##  Options
